Fix the alignment for the videos

--- a/static/css/faqs.css
+++ b/static/css/faqs.css
@@ -6,3 +6,8 @@
 .newer-question{
     margin-top:20px;
 }
+.help_video{
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
